--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -4,8 +4,8 @@
             <div class="col-md-8 col-md-offset-2">
                 <h2 class="section-heading">Publication &nbsp;<i style="color:#21cddb" class="far fa-file-alt"></i></h2>
                 <p>Jason Aebischer, Jacky Kumar, David M. Straub: <em>wilson</em></p>
-                <a href="#" class="btn btn-outline btn-xl">arXiv</a>
-                <a href="#" class="btn btn-outline btn-xl">Inspire</a>
+                <a href="https://arxiv.org/abs/1804.05033" class="btn btn-outline btn-xl">arXiv</a>
+                <a href="https://inspirehep.net/record/1667740" class="btn btn-outline btn-xl">Inspire</a>
             </div>
         </div>
     </div>
